--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Наше кольцо в Дубае</title>
+  <title>17.01.2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -356,20 +356,20 @@
     <div class="card">
       <div class="hero-tag">
         <span class="hero-tag-dot"></span>
-        <span>Ценный сайт с частичкой нашей любви</span>
+        <span>Ценный сайт с частичкой нашей любви и началом чего-то нового</span>
       </div>
 
-      <h1>Если ты читаешь это, значит, ты сказала мне «да».</h1>
+      <h1>Если ты читаешь это, значит, ты сказала мне «да»🤍</h1>
       <div class="hero-sub">
-        Любимая, бесконечное спасибо тебе за то, что выбрала меня. При вёрстке этого сайта пролита не одна слеза из-за осмысления нашей истории и осознания трогательности момента. Люблю тебя в каждом из них.
+        Любимая, бесконечное спасибо тебе за то, что выбрала меня. При вёрстке этого сайта пролита не одна слеза из-за осмысления нашей истории и осознания трогательности момента
       </div>
 
       <!-- ШАГ 1 — МОМЕНТЫ -->
       <div class="section">
         <div class="section-title">Шаг 1</div>
-        <h2>Моменты, из которых вырос наш вечер 17.01.2026</h2>
+        <h2>Моменты, которые привели нас к этому вечеру</h2>
         <p>
-          Интересно, сколько ресурсов тратят корпорации, чтобы хранить всю нашу историю, но я искренне благодарен им за это.
+          Люблю тебя в каждом из них ∞
         </p>
 
         <div class="photos-grid">
