--- a/index.html
+++ b/index.html
@@ -461,7 +461,29 @@
         'img/photo17.jpg',
         'img/photo18.jpg',
         'img/photo19.jpg',
-        'img/photo20.jpg'
+        'img/photo20.jpg',
+        'img/photo21.jpg',
+        'img/photo22.jpg',
+        'img/photo23.jpg',
+        'img/photo24.jpg',
+        'img/photo25.jpg',
+        'img/photo26.jpg',
+        'img/photo27.jpg',
+        'img/photo28.jpg',
+        'img/photo29.jpg',
+        'img/photo30.jpg',
+        'img/photo31.jpg',
+        'img/photo32.jpg',
+        'img/photo33.jpg',
+        'img/photo34.jpg',
+        'img/photo35.jpg',
+        'img/photo36.jpg',
+        'img/photo37.jpg',
+        'img/photo38.jpg',
+        'img/photo39.jpg',
+        'img/photo40.jpg',
+        'img/photo41.jpg',
+        'img/photo42.jpg'
         // добавляй дальше по мере надобности
       ];
 
